Change crate description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bevy_image_export"
 version = "0.1.0"
 edition = "2021"
 categories = ["graphics", "rendering"]
-description = "Bevy plugin for exporting your app as an image sequence"
+description = "Bevy plugin enabling you to render image sequences"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/paulkre/bevy_image_export"
