Add crate keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "bevy_image_export"
 version = "0.1.0"
 edition = "2021"
 categories = ["graphics", "rendering"]
+keywords = ["creative", "coding", "sketching", "openframeworks", "processing"]
 description = "Bevy plugin enabling you to render image sequences"
 license = "MIT"
 readme = "README.md"
