--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 categories = ["graphics", "rendering"]
 keywords = ["creative", "coding", "sketching", "openframeworks", "processing"]
 description = "Bevy plugin enabling you to render image sequences"
+documentation = "https://docs.rs/bevy_image_export"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/paulkre/bevy_image_export"
