--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ readme = "README.md"
 repository = "https://github.com/paulkre/bevy_image_export"
 
 [dependencies]
-bevy = "0.8"
+bevy = "0.9"
 futures = "0.3"
 futures-lite = "1"
-image = ">=0.24"
-wgpu = ">=0.12"
+image = "0.24"
+wgpu = "0.14"
 
 [profile.dev]
 opt-level = 1
