--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "bevy_image_export"
 version = "0.3.0"
 edition = "2021"
 categories = ["graphics", "rendering"]
-keywords = ["creative", "coding", "sketching", "openframeworks", "processing"]
-description = "Bevy plugin enabling you to render image sequences"
+keywords = ["creative", "coding", "sketching"]
+description = "Bevy plugin for rendering image sequences"
 documentation = "https://docs.rs/bevy_image_export"
 license = "MIT"
 readme = "README.md"
