--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ readme = "README.md"
 repository = "https://github.com/paulkre/bevy_image_export"
 
 [dependencies]
-bevy = { version = "0.13", default-features = false, features = [
+bevy = { version = "0.14", default-features = false, features = [
   "bevy_render",
   "bevy_asset",
 ] }
-image = { version = "0.24", default-features = false }
+image = { version = "0.25", default-features = false }
 futures = "0.3"
 futures-lite = "2.1"
-wgpu = "0.19.1"
+wgpu = "0.20"
 bytemuck = "1.13"
 
 [features]
@@ -28,17 +28,8 @@ jpeg = ["image/jpeg"]
 exr = ["image/exr"]
 
 [dev-dependencies]
-bevy = { version = "0.13", default-features = false, features = [
-  "bevy_sprite",
-  "bevy_winit",
-  "bevy_core_pipeline",
-  "bevy_pbr",
-  "hdr",
-  "tonemapping_luts",
-  "ktx2",
-  "zstd",
-] }
-image = { version = "0.24", default-features = false, features = ["exr"] }
+bevy = "0.14"
+image = { version = "0.25", default-features = false, features = ["exr"] }
 
 [profile.dev]
 opt-level = 1
