--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/paulkre/bevy_image_export"
 bevy = { version = "0.16", default-features = false, features = [
   "bevy_render",
   "bevy_asset",
+  "trace",
 ] }
 image = { version = "0.25", default-features = false }
 futures = "0.3"
